--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,11 @@
     "default_popup": "popup.html",
     "default_title": "Screenshot Tool"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
