Translate entire extension to English for Chrome Web Store
- Translated all UI elements from Russian to English
- Updated popup.html: 'Page URL' and 'Take Screenshot' button
- Updated popup.js: all status messages in English
- Updated manifest.json description to English
- Translated all code comments to English
- Ready for international Chrome Web Store submission

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Screenshot Tool",
   "version": "1.0",
-  "description": "Открывает URL, ждет загрузки и делает полный скриншот страницы",
+  "description": "Opens a URL, waits for the page to load, and takes a full-page screenshot.",
   "permissions": [
     "activeTab",
     "tabs",
